--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Weatherly</title>
+    <title>Weathrly</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
   </head>
   <body>
     <div id="application">
