--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Weathrly</title>
@@ -7,7 +7,6 @@
   </head>
   <body>
     <div id="application">
-
     </div>
 
   <script type="text/javascript" src="main.bundle.js"></script>
