--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="application">
     </div>
 
-  <script type="text/javascript" src="main.bundle.js"></script>
+  <script type="text/javascript" src="./build/main.bundle.js"></script>
 </body>
 
 </html>
